io-hotmoka-examples/src/main/java/io/hotmoka/tests/errors/illegalsynchronized1/C.java
package io.hotmoka.tests.errors.illegalsynchronized1;

public class C {
	public synchronized void foo() {
	}
}